--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.15)
-project(3D_renderer)
+project(gravity_simulator)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(SFML COMPONENTS Graphics Window System REQUIRED)
 
-add_executable(3D_renderer
+add_executable(gravity_simulator
     src/main.cpp
     src/math.cpp
-    src/obj_loader.cpp
 )
 
 
-target_include_directories(3D_renderer PRIVATE include)
+target_include_directories(gravity_simulator PRIVATE include)
 
-target_link_libraries(3D_renderer
+target_link_libraries(gravity_simulator
     PRIVATE
         sfml-graphics
         sfml-window
